add missing slash

--- a/templates/home/home.hbs
+++ b/templates/home/home.hbs
@@ -27,7 +27,7 @@
     <h1>Chase's Awesome Photo Gallery</h1>
     <div class="pictures">
         {{#each photos}}
-            <div style="background-image: url({{this}});"></div>
+            <div style="background-image: url(/{{this}});"></div>
         {{/each}}
     </div>
 </body>
