more mobile friendly

--- a/templates/home/home.hbs
+++ b/templates/home/home.hbs
@@ -21,6 +21,16 @@
             width: 500px;
             height: 500px;
         }
+        @media (max-width: 950px) {
+            h1 {
+                font-size: 48px;
+            }
+            .pictures div {
+                width: 100%;
+                height: 500px;
+                margin-bottom: 10px;
+            }
+        }
     </style>
 </head>
 <body>
