restore old photos

--- a/templates/home/home.hbs
+++ b/templates/home/home.hbs
@@ -40,5 +40,32 @@
             <div style="background-image: url(/{{this}});"></div>
         {{/each}}
     </div>
+    <!--
+        for felix discovery:
+        /public/chase/IMG_20180912_095622.jpg
+        /public/chase/IMG_20180912_212514.jpg
+        /public/chase/IMG_20180914_124612.jpg
+        /public/chase/IMG_20180917_095616.jpg
+        /public/chase/IMG_20180918_101453.jpg
+        /public/chase/IMG_20180920_231331.jpg
+        /public/chase/IMG_20180928_121138.jpg
+        /public/chase/IMG_20180929_140615.jpg
+        /public/chase/IMG_20180930_123317.jpg
+        /public/chase/IMG_20181002_131520.jpg
+        /public/chase/IMG_20181006_225617.jpg
+        /public/chase/IMG_20181007_174948.jpg
+        /public/chase/IMG_20181011_163032.jpg
+        /public/chase/IMG_20181012_235245.jpg
+        /public/chase/IMG_20181018_211610.jpg
+        /public/chase/IMG_20181019_105839.jpg
+        /public/chase/IMG_20181021_165252.jpg
+        /public/chase/IMG_20181025_102242.jpg
+        /public/chase/IMG_20181031_194229.jpg
+        /public/chase/IMG_20181102_114038.jpg
+        /public/chase/IMG_20181105_102651.jpg
+        /public/chase/IMG_20181105_183137.jpg
+        /public/chase/IMG_20181106_233230.jpg
+        /public/chase/IMG_20181107_225418.jpg
+    -->
 </body>
 </html>
