--- a/templates/home/home.hbs
+++ b/templates/home/home.hbs
@@ -10,6 +10,22 @@
             font-size: 72px;
             font-weight: bold;
             color: #fff;
+            margin-bottom: 0;
+        }
+        h3 {
+            text-align: center;
+            font-size: 32px;
+            font-weight: bold;
+            color: #fff;
+            margin-top: 0;
+        }
+        h5 {
+            text-align: center;
+            font-size: 22px;
+            font-weight: bold;
+            color: #fff;
+            margin-top: 10px;
+            margin-bottom: 25px;
         }
         .pictures {
             text-align: center;
@@ -35,6 +51,8 @@
 </head>
 <body>
     <h1>Chase's Awesome Photo Gallery</h1>
+    <h5>Dedicated to the best dog to ever walk the earth.<br />I will cherish every memory of you and I and I will not soon forget about you.<br />I love you more than anything in this world.</h5>
+    <h3>Rest In Peace 3/31/2017 - 1/17/2022</h3>
     <div class="pictures">
         {{#each photos}}
             <div style="background-image: url(/{{this}});"></div>
