--- a/templates/home/home.hbs
+++ b/templates/home/home.hbs
@@ -51,7 +51,7 @@
 </head>
 <body>
     <h1>Chase's Awesome Photo Gallery</h1>
-    <h5>Dedicated to the best dog to ever walk the earth.<br />I will cherish every memory of you and I and I will not soon forget about you.<br />I love you more than anything in this world.</h5>
+    <h5>Dedicated to the best dog to ever walk the earth.<br />I will cherish every memory of you and I will not soon forget about you.<br />I love you more than anything in this world.</h5>
     <h3>Rest In Peace 3/31/2017 - 1/17/2022</h3>
     <div class="pictures">
         {{#each photos}}
